Add Illuminarty & OpenAI API integration + text analysis feature

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,5 +3,15 @@ JWT_SECRET=changez-ceci-minimum-32-caracteres
 PORT=3001
 FRONTEND_URL=http://localhost:5173
 STRIPE_SECRET_KEY=sk_test_xxx
+
+# Illuminarty API (détection IA d'images - recommandé)
+ILLUMINARTY_USER=xxx
+ILLUMINARTY_SECRET=xxx
+ILLUMINARTY_API_KEY=xxx
+
+# OpenAI API (analyse avancée texte/vision)
+OPENAI_API_KEY=sk-xxx
+
+# Sightengine API (alternative pour détection IA)
 SIGHTENGINE_USER=xxx
 SIGHTENGINE_SECRET=xxx
