--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
-    "framer-motion": "^10.16.16",
+    "clsx": "^2.1.1",
+    "framer-motion": "^10.18.0",
     "i18next": "^23.7.11",
     "i18next-browser-languagedetector": "^7.2.0",
     "lucide-react": "^0.303.0",
@@ -19,6 +20,7 @@
     "react-hot-toast": "^2.4.1",
     "react-i18next": "^14.0.0",
     "react-router-dom": "^6.21.1",
+    "tailwind-merge": "^3.4.0",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
