--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "i18n:check": "node scripts/i18n-check.js",
     "build": "vite build",
     "preview": "vite preview"
   },
