--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^10.18.0",
     "i18next": "^23.7.11",
     "i18next-browser-languagedetector": "^7.2.0",
+    "jspdf": "^3.0.4",
     "lucide-react": "^0.303.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
