--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "form-data": "^4.0.5",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
     "stripe": "^14.25.0",
     "uuid": "^9.0.1"
   },
