--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "express-validator": "^7.3.1",
     "form-data": "^4.0.5",
     "helmet": "^8.1.0",
+    "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
     "multer": "^1.4.5-lts.1",
