--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "morgan": "^1.10.1",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
+    "nodemailer": "^7.0.12",
     "stripe": "^14.25.0",
     "uuid": "^9.0.1",
     "winston": "^3.19.0"
