feat: email system with Google Workspace (nodemailer + app password)

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -15,3 +15,11 @@ OPENAI_API_KEY=sk-xxx
 # Sightengine API (alternative pour détection IA)
 SIGHTENGINE_USER=xxx
 SIGHTENGINE_SECRET=xxx
+
+# Redis Cache (Upstash - Optionnel, économise 70-80% des coûts API)
+# REDIS_URL=rediss://default:YOUR_TOKEN@YOUR_HOST.upstash.io:6379
+
+# Email (Google Workspace - Optionnel, pour notifications automatiques)
+# EMAIL_USER=contact@faketect.com
+# EMAIL_PASS=votre-mot-de-passe-google-workspace
+# EMAIL_FROM=no-reply@faketect.com
