feat: add Sentry monitoring (backend + frontend) with graceful fallback

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -23,3 +23,6 @@ SIGHTENGINE_SECRET=xxx
 # EMAIL_USER=contact@faketect.com
 # EMAIL_PASS=votre-mot-de-passe-google-workspace
 # EMAIL_FROM=no-reply@faketect.com
+
+# Sentry Monitoring (Optionnel, pour tracker les erreurs en production)
+# SENTRY_DSN=https://xxxxx@xxxxx.ingest.de.sentry.io/xxxxx
