--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@sentry/react": "^10.32.1",
     "axios": "^1.6.2",
     "clsx": "^2.1.1",
     "framer-motion": "^10.18.0",
