--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,9 @@
     "express": "^4.18.2",
     "express-rate-limit": "^8.2.1",
     "express-validator": "^7.3.1",
+    "fluent-ffmpeg": "^2.1.3",
     "form-data": "^4.0.5",
+    "get-video-duration": "^5.0.0",
     "helmet": "^8.1.0",
     "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.2",
