--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^8.2.1",
+    "express-slow-down": "^3.0.1",
     "express-validator": "^7.3.1",
     "fluent-ffmpeg": "^2.1.3",
     "form-data": "^4.0.5",
