perf: Amélioration scalabilité - Clustering + Connection pooling + Timeouts
SCALABILITÉ:
✅ Clustering Node.js (utilise tous les CPUs disponibles)
✅ Connection pooling Prisma (max 20 connexions/worker)
✅ Timeouts API (30s images, 60s vidéos)
✅ Auto-restart workers en cas de crash
✅ Graceful shutdown pour éviter perte de données

AMÉLIORATIONS:
- src/cluster.js: Nouveau système de clustering avec protection crash-loop
- src/config/db.js: Connection pooling configuré (évite épuisement DB)
- src/services/detection.js: Timeouts pour éviter workers bloqués
- src/index.js: Exposition serveur pour graceful shutdown
- package.json: Script start utilise cluster.js par défaut

CAPACITÉ:
Avant: 1 worker = ~10-20 utilisateurs simultanés
Après: 2-4 workers = ~100-200 utilisateurs simultanés

DOCUMENTATION:
- ANALYSE_SCALABILITE.md: Rapport complet d'analyse avec recommandations

--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,8 @@
   "name": "faketect-backend",
   "version": "1.0.0",
   "scripts": {
-    "start": "node src/index.js",
+    "start": "node src/cluster.js",
+    "start:single": "node src/index.js",
     "dev": "node --watch src/index.js"
   },
   "dependencies": {
